insurance funnel: Removing unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -202,7 +202,7 @@ h3 {
 
       span.threecol.btn:hover {
         background-color: #2541b2;
-        border-color: #2541b2;
+        border: 0;
       }
 
       span.threecol.btn {
